Oprettet semantiske tags til hele hjemmesiden

--- a/Checkout.html
+++ b/Checkout.html
@@ -21,157 +21,166 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
-    <div class="container-fluid position-relative">
-        <a class="position-absolute logo-placering" href="index.html">
-            <img src="images/Logo-Design.png" alt="Logo" width="160">
-        </a>
-        <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle px-lg-3" href="#" id="navbarDropdownMenuLink2" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
-                    <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
-                        <li><a class="dropdown-item" href="Produkt-Eksklusive.html">DET EKSKLUSIVE</a></li>
-                        <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="#">OM OS</a>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="kontaktform.html">KONTAKT</a>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="Checkout.html">DIN KURV</a>
-                </li>
-            </ul>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
+        <div class="container-fluid position-relative">
+            <a class="position-absolute logo-placering" href="index.html">
+                <img src="images/Logo-Design.png" alt="Logo" width="160">
+            </a>
+            <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle px-lg-3" href="#" id="navbarDropdownMenuLink2" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
+                        <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
+                            <li><a class="dropdown-item" href="Produkt-Eksklusive.html">DET EKSKLUSIVE</a></li>
+                            <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="#">OM OS</a>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="kontaktform.html">KONTAKT</a>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="Checkout.html">DIN KURV</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
+    <div class="hero-image" style="height: 50vh;">
     </div>
-</nav>
+</header>
 
-<div class="hero-image" style="height: 50%">
-</div>
+<main>
+    <div class="TekstForside">
+        <h1 class="Introtekst">Checkout</h1>
+    </div>
 
-<div class="TekstForside">
-    <h1 class="Introtekst">Checkout</h1>
-</div>
-
-<section class="h-90 h-custom pb-4">
-    <div class="container py-2 h-90">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body p-lg-4">
-                        <div class="row">
-                            <div class="col">
-                                <h5 class="mb-3"><span href="#" class="text-body" style="text-transform: uppercase">
+    <section class="h-90 h-custom pb-4">
+        <div class="container py-2 h-90">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body p-lg-4">
+                            <div class="row">
+                                <div class="col">
+                                    <h5 class="mb-3"><span href="#" class="text-body" style="text-transform: uppercase">
                                     <i class="fas fa-long-arrow-alt-left me-2"></i>Fortsæt shopping</span></h5>
-                                <hr>
-                                <div class="card mb-3">
-                                    <div class="card-body">
-                                        <div class="d-flex justify-content-between">
-                                            <div class="d-flex flex-row align-items-center">
-                                                <div>
-                                                    <img src="images/Chocobombs.png" class="img-fluid rounded-3"
-                                                         alt="Shopping item" style="width: 65px;">
+                                    <hr>
+                                    <div class="card mb-3">
+                                        <div class="card-body">
+                                            <div class="d-flex justify-content-between">
+                                                <div class="d-flex flex-row align-items-center">
+                                                    <div>
+                                                        <img src="images/Chocobombs.png" class="img-fluid rounded-3"
+                                                             alt="Shopping item" style="width: 65px;">
+                                                    </div>
+                                                    <div class="ms-3">
+                                                        <h5 style="font-size: 15px">CHOCOBOMBS</h5>
+                                                        <p class="small mb-0">2 stk.</p>
+                                                    </div>
                                                 </div>
-                                                <div class="ms-3">
-                                                    <h5 style="font-size: 15px">CHOCOBOMBS</h5>
-                                                    <p class="small mb-0">2 stk.</p>
+                                                <div class="d-flex flex-row align-items-center">
+                                                    <div style="width: 80px;">
+                                                        <h5 class="mb-0" style="font-size: 15px">200 kr.</h5>
+                                                    </div>
+                                                    <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                                 </div>
                                             </div>
-                                            <div class="d-flex flex-row align-items-center">
-                                                <div style="width: 80px;">
-                                                    <h5 class="mb-0" style="font-size: 15px">200 kr.</h5>
+                                        </div>
+                                    </div>
+
+                                    <div class="card mb-3">
+                                        <div class="card-body">
+                                            <div class="d-flex justify-content-between">
+                                                <div class="d-flex flex-row align-items-center">
+                                                    <div>
+                                                        <img src="images/Chokolade-3styk.png"
+                                                             class="img-fluid rounded-3"
+                                                             alt="Shopping item" style="width: 65px;">
+                                                    </div>
+                                                    <div class="ms-3">
+                                                        <h5 style="font-size: 15px">CHOCO CLOUD</h5>
+                                                        <p class="small mb-0">1 stk.</p>
+                                                    </div>
                                                 </div>
-                                                <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
+                                                <div class="d-flex flex-row align-items-center">
+                                                    <div style="width: 80px;">
+                                                        <h5 class="mb-0" style="font-size: 15px">200 kr.</h5>
+                                                    </div>
+                                                    <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="card mb-3 mb-lg-0">
+                                        <div class="card-body">
+                                            <div class="d-flex justify-content-between">
+                                                <div class="d-flex flex-row align-items-center">
+                                                    <div>
+                                                        <img src="images/Gaveæske.png" class="img-fluid rounded-3"
+                                                             alt="Shopping item" style="width: 65px;">
+                                                    </div>
+                                                    <div class="ms-3">
+                                                        <h5 style="font-size: 15px">GAVEÆSKE</h5>
+                                                        <p class="small mb-0">1 stk.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="d-flex flex-row align-items-center">
+                                                    <div style="width: 80px;">
+                                                        <h5 class="mb-0" style="font-size: 15px">399 kr.</h5>
+                                                    </div>
+                                                    <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="card mb-3">
-                                    <div class="card-body">
-                                        <div class="d-flex justify-content-between">
-                                            <div class="d-flex flex-row align-items-center">
-                                                <div>
-                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3"
-                                                         alt="Shopping item" style="width: 65px;">
-                                                </div>
-                                                <div class="ms-3">
-                                                    <h5 style="font-size: 15px">CHOCO CLOUD</h5>
-                                                    <p class="small mb-0">1 stk.</p>
-                                                </div>
-                                            </div>
-                                            <div class="d-flex flex-row align-items-center">
-                                                <div style="width: 80px;">
-                                                    <h5 class="mb-0" style="font-size: 15px">200 kr.</h5>
-                                                </div>
-                                                <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
-                                            </div>
-                                        </div>
+                                <hr class="my-4">
+
+                                <div class="d-flex justify-content-between"
+                                     style="font-weight: 600; text-transform: uppercase">
+                                    <p class="mb-2">Subtotal</p>
+                                    <p class="mb-2">400.00 kr</p>
+                                </div>
+
+                                <div class="d-flex justify-content-between"
+                                     style="font-weight: 600; text-transform: uppercase">
+                                    <p class="mb-2">Click & Collect</p>
+                                    <p class="mb-2">0 kr</p>
+                                </div>
+
+                                <div class="d-flex justify-content-between mb-4"
+                                     style="font-weight: 600; text-transform: uppercase">
+                                    <p class="mb-2">Total</p>
+                                    <p class="mb-2">400.00 kr</p>
+                                </div>
+
+                                <button type="button" class="btn btn-block btn-lg bg-lyseBrun" style="font-weight: 600">
+                                    <div class="d-flex justify-content-between">
+                                        <span style="font-size: 18px; text-transform: uppercase;">Fortsæt til betaling<i
+                                                class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                     </div>
-                                </div>
-
-                                <div class="card mb-3 mb-lg-0">
-                                    <div class="card-body">
-                                        <div class="d-flex justify-content-between">
-                                            <div class="d-flex flex-row align-items-center">
-                                                <div>
-                                                    <img src="images/Gaveæske.png" class="img-fluid rounded-3"
-                                                         alt="Shopping item" style="width: 65px;">
-                                                </div>
-                                                <div class="ms-3">
-                                                    <h5 style="font-size: 15px">GAVEÆSKE</h5>
-                                                    <p class="small mb-0">1 stk.</p>
-                                                </div>
-                                            </div>
-                                            <div class="d-flex flex-row align-items-center">
-                                                <div style="width: 80px;">
-                                                    <h5 class="mb-0" style="font-size: 15px">399 kr.</h5>
-                                                </div>
-                                                <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                </button>
                             </div>
-
-                            <hr class="my-4">
-
-                            <div class="d-flex justify-content-between" style="font-weight: 600; text-transform: uppercase">
-                                <p class="mb-2">Subtotal</p>
-                                <p class="mb-2">400.00 kr</p>
-                            </div>
-
-                            <div class="d-flex justify-content-between" style="font-weight: 600; text-transform: uppercase">
-                                <p class="mb-2">Click & Collect</p>
-                                <p class="mb-2">0 kr</p>
-                            </div>
-
-                            <div class="d-flex justify-content-between mb-4" style="font-weight: 600; text-transform: uppercase">
-                                <p class="mb-2">Total</p>
-                                <p class="mb-2">400.00 kr</p>
-                            </div>
-
-                            <button type="button" class="btn btn-block btn-lg bg-lyseBrun" style="font-weight: 600">
-                                <div class="d-flex justify-content-between">
-                                    <span style="font-size: 18px; text-transform: uppercase;">Fortsæt til betaling<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
-                                </div>
-                            </button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+</main>
 
 <footer class="footer-distributed">
     <div class="footer-right">
