--- a/Produkt-Eksklusive.html
+++ b/Produkt-Eksklusive.html
@@ -21,103 +21,110 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
-    <div class="container-fluid position-relative">
-        <a class="position-absolute logo-placering" href="index.html">
-            <img src="images/Logo-Design.png" alt="Logo" width="160">
-        </a>
-        <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle px-lg-3" href="#" id="navbarDropdownMenuLink2" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
-                    <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
-                        <li><a class="dropdown-item" href="Produkt-Eksklusive.html">DET EKSKLUSIVE</a></li>
-                        <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="#">OM OS</a>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="kontaktform.html">KONTAKT</a>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="Checkout.html">DIN KURV</a>
-                </li>
-            </ul>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
+        <div class="container-fluid position-relative">
+            <a class="position-absolute logo-placering" href="index.html">
+                <img src="images/Logo-Design.png" alt="Logo" width="160">
+            </a>
+            <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle px-lg-3" href="#" id="navbarDropdownMenuLink2" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
+                        <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
+                            <li><a class="dropdown-item" href="Produkt-Eksklusive.html">DET EKSKLUSIVE</a></li>
+                            <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="#">OM OS</a>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="kontaktform.html">KONTAKT</a>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="Checkout.html">DIN KURV</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="hero-image">
+    </div>
+</header>
+
+
+<main>
+    <div class="TekstForside px-lg-5">
+        <h1 class="Introtekst">PRODUKTER // DET EKSKLUSIVE</h1>
+        <p class="TekstForside-paragraph py-lg-3">Vores eksklusive og fantastiske chokolader er til dig der ønsker den
+            bedste smagsoplevelse.
+            Chokoladerne er lavet på lækre kvalitetsprodukter.
+            Herudover er de håndlavede, så både det indre og ydre spiller.
+        </p>
+    </div>
+
+    <div class="card-group px-3 px-lg-5 py-5 pb-5 pt-3">
+        <div class="row g-3">
+            <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
+                <div class="card border-0 position-relative bg-lyseBrun">
+                    <img src="images/FyldteChokoEksklusiv.png" class="card-img-top px-lg-2" alt="chokolade">
+
+                    <div class="row py-2">
+                        <div class="col-7 produkttekst">
+                            <h4 class="produkttekst py-3 px-lg-2">Fyldte chokolader</h4>
+                            <p class="px-lg-2">24 stk.</p>
+                        </div>
+
+                        <div class="col-5 d-flex justify-content-end align-items-end ">
+                            <span role="button" class="billede-knap">149 kr.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
+                <div class="card border-0 position-relative bg-lyseBrun">
+                    <img src="images/Chocobombs.png" class="card-img-top px-lg-2" alt="chokolade">
+
+                    <div class="row py-2">
+                        <div class="col-7 produkttekst">
+                            <h4 class="produkttekst py-3 px-lg-2">Choco Bomb</h4>
+                            <p class=" px-lg-2">4 stk.</p>
+                        </div>
+
+                        <div class="col-5 d-flex justify-content-end align-items-end ">
+                            <span role="button" class="billede-knap">199 kr.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
+                <div class="card border-0 position-relative bg-lyseBrun">
+                    <img src="images/Gaveæske.png" class="card-img-top px-lg-2" alt="chokolade">
+
+                    <div class="row py-2">
+                        <div class="col-7 produkttekst">
+                            <h4 class="produkttekst py-3 px-lg-2">Gaveæske</h4>
+                            <p class=" px-lg-2">1 stk.</p>
+                        </div>
+
+                        <div class="col-5 d-flex justify-content-end align-items-end ">
+                            <span role="button" class="billede-knap">399 kr.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</nav>
-
-<div class="hero-image">
-</div>
-
-<div class="TekstForside px-lg-5">
-    <h1 class="Introtekst">PRODUKTER // DET EKSKLUSIVE</h1>
-    <p class="TekstForside-paragraph py-lg-3">Vores eksklusive og fantastiske chokolader er til dig der ønsker den bedste smagsoplevelse.
-        Chokoladerne er lavet på lækre kvalitetsprodukter.
-        Herudover er de håndlavede, så både det indre og ydre spiller.
-    </p>
-</div>
-
-<div class="card-group px-3 px-lg-5 py-5 pb-5 pt-3">
-    <div class="row g-3">
-        <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
-            <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/FyldteChokoEksklusiv.png" class="card-img-top px-lg-2" alt="chokolade">
-
-                <div class="row py-2">
-                    <div class="col-7 produkttekst">
-                        <h4 class="produkttekst py-3 px-lg-2">Fyldte chokolader</h4>
-                        <p class="px-lg-2">24 stk.</p>
-                    </div>
-
-                    <div class="col-5 d-flex justify-content-end align-items-end ">
-                        <span role="button" class="billede-knap">149 kr.</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
-            <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/Chocobombs.png" class="card-img-top px-lg-2" alt="chokolade">
-
-                <div class="row py-2">
-                    <div class="col-7 produkttekst">
-                        <h4 class="produkttekst py-3 px-lg-2">Choco Bomb</h4>
-                        <p class=" px-lg-2">4 stk.</p>
-                    </div>
-
-                    <div class="col-5 d-flex justify-content-end align-items-end ">
-                        <span role="button" class="billede-knap">199 kr.</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
-            <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/Gaveæske.png" class="card-img-top px-lg-2" alt="chokolade">
-
-                <div class="row py-2">
-                    <div class="col-7 produkttekst">
-                        <h4 class="produkttekst py-3 px-lg-2">Gaveæske</h4>
-                        <p class=" px-lg-2">1 stk.</p>
-                    </div>
-
-                    <div class="col-5 d-flex justify-content-end align-items-end ">
-                        <span role="button" class="billede-knap">399 kr.</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+</main>
 
 
 <footer class="footer-distributed">
