--- a/index.html
+++ b/index.html
@@ -21,75 +21,83 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
-    <div class="container-fluid position-relative">
-        <a class="position-absolute logo-placering" href="index.html">
-            <img src="images/Logo-Design.png" alt="Logo" width="160">
-        </a>
-        <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle px-lg-3" href="#" id="navbarDropdownMenuLink2" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
-                    <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
-                        <li><a class="dropdown-item" href="Produkt-Eksklusive.html">DET EKSKLUSIVE</a></li>
-                        <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="#">OM OS</a>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="kontaktform.html">KONTAKT</a>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="Checkout.html">DIN KURV</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<div class="hero-image">
-    <div class="hero-text">
-        <h1 style="font-size:50px">Chokolade til enhver smag</h1>
-        <br>
-        <button>Læs mere</button>
-    </div>
-</div>
-
-<div class="TekstForside">
-    <h1 class="Introtekst">Hvem er vi?</h1>
-    <p class="TekstForside-paragraph px-lg-5">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
-</div>
-
-<div class="card-group px-3 px-lg-5 py-5">
-    <div class="row g-3">
-        <div class="col col-md-12 col-lg-4">
-            <div class="card border-0 position-relative m-0"> <!-- style="width: 80%" -->
-                <img src="images/ForsideBarn.png" class="card-img-top" alt="chokolade">
-                <a href="Produkt-Børnevenligt.html"><span role="button" class="billede-knap">BØRNEVENLIGE</span></a>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
+        <div class="container-fluid position-relative">
+            <a class="position-absolute logo-placering" href="index.html">
+                <img src="images/Logo-Design.png" alt="Logo" width="160">
+            </a>
+            <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle px-lg-3" href="#" id="navbarDropdownMenuLink2" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
+                        <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
+                            <li><a class="dropdown-item" href="Produkt-Eksklusive.html">DET EKSKLUSIVE</a></li>
+                            <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="#">OM OS</a>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="kontaktform.html">KONTAKT</a>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="Checkout.html">DIN KURV</a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <div class="col-sm-4 col-md-6 col-lg-4">
-            <div class="card border-0 position-relative ">
-                <img src="images/Dessertchokolader.png" class="card-img-top" alt="chokolade">
-                <a href="Produkt-Eksklusive.html"><span role="button" class="billede-knap">EKSKLUSIVE</span></a>
-            </div>
+    </nav>
+
+    <div class="hero-image">
+        <div class="hero-text">
+            <h1 style="font-size:50px">Chokolade til enhver smag</h1>
+            <br>
+            <button>Læs mere</button>
         </div>
-        <div class="col-sm-4 col-md-6 col-lg-4 pb-3">
-            <div class="card border-0 position-relative">
-                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
-                <a href="Produkt-Festlige.html"><span role="button" class="billede-knap">BEGIVENHEDER</span></a>
+    </div>
+</header>
+
+<main>
+    <div class="TekstForside">
+        <h1 class="Introtekst">Hvem er vi?</h1>
+        <p class="TekstForside-paragraph px-lg-5">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og
+            tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det
+            eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi
+            fantastiske produkter til dig der har en større begivenhed i sigte. </p>
+    </div>
+
+    <div class="card-group px-3 px-lg-5 py-5">
+        <div class="row g-3">
+            <div class="col col-md-12 col-lg-4">
+                <div class="card border-0 position-relative m-0"> <!-- style="width: 80%" -->
+                    <img src="images/ForsideBarn.png" class="card-img-top" alt="chokolade">
+                    <a href="Produkt-Børnevenligt.html"><span role="button" class="billede-knap">BØRNEVENLIGE</span></a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-6 col-lg-4">
+                <div class="card border-0 position-relative ">
+                    <img src="images/Dessertchokolader.png" class="card-img-top" alt="chokolade">
+                    <a href="Produkt-Eksklusive.html"><span role="button" class="billede-knap">EKSKLUSIVE</span></a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-6 col-lg-4 pb-3">
+                <div class="card border-0 position-relative">
+                    <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+                    <a href="Produkt-Festlige.html"><span role="button" class="billede-knap">BEGIVENHEDER</span></a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</main>
 
 
 <footer class="footer-distributed">
