--- a/kontaktform.html
+++ b/kontaktform.html
@@ -28,71 +28,73 @@
 
 <body>
 
-
-<nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
-    <div class="container-fluid position-relative">
-        <a class="position-absolute logo-placering" href="index.html">
-            <img src="images/Logo-Design.png" alt="Logo" width="160">
-        </a>
-        <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle px-lg-3" href="#" id="navbarDropdownMenuLink2" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
-                    <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
-                        <li><a class="dropdown-item" href="Produkt-Eksklusive.html">DET EKSKLUSIVE</a></li>
-                        <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="#">OM OS</a>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="kontaktform.html">KONTAKT</a>
-                </li>
-                <li class="nav-item text-end px-lg-3">
-                    <a class="nav-link" href="Checkout.html">DIN KURV</a>
-                </li>
-            </ul>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
+        <div class="container-fluid position-relative">
+            <a class="position-absolute logo-placering" href="index.html">
+                <img src="images/Logo-Design.png" alt="Logo" width="160">
+            </a>
+            <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle px-lg-3" href="#" id="navbarDropdownMenuLink2" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
+                        <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
+                            <li><a class="dropdown-item" href="Produkt-Eksklusive.html">DET EKSKLUSIVE</a></li>
+                            <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="#">OM OS</a>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="kontaktform.html">KONTAKT</a>
+                    </li>
+                    <li class="nav-item text-end px-lg-3">
+                        <a class="nav-link" href="Checkout.html">DIN KURV</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
+
+    <div class="hero-image">
     </div>
-</nav>
+</header>
 
-<div class="hero-image">
-</div>
-
-<!-- Kontakt form -->
-<section class="container">
-
-    <form action="">
-        <div class="row p-3 px-lg-5 py-lg-5 kontaktformtekst">
-            <div class="col-12 kontakttekst py-3">
-                <h1 class="Introtekst">Kontakt os</h1>
+<main>
+    <!-- Kontakt form -->
+    <section class="container">
+        <form action="">
+            <div class="row p-3 px-lg-5 py-lg-5 kontaktformtekst">
+                <div class="col-12 kontakttekst py-3">
+                    <h1 class="Introtekst">Kontakt os</h1>
+                </div>
+                <div class="col-12 kontaktform-overskrifter">
+                    <label for="navn">Navn</label>
+                    <input type="text" id="navn" name="fornavn" placeholder="Dit navn...">
+                </div>
+                <div class="col-12 kontaktform-overskrifter">
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="email" placeholder="Din email...">
+                </div>
+                <div class="col-12 kontaktform-overskrifter">
+                    <label for="emne">Emne</label>
+                    <textarea id="emne" name="Emne" placeholder="Skriv noget..." style="height:300px"></textarea>
+                </div>
+                <div class="col-12 kontaktform-overskrifter">
+                    <input style="text-transform: uppercase" type="submit" value="Send besked">
+                </div>
             </div>
-            <div class="col-12 kontaktform-overskrifter">
-                <label for="navn">Navn</label>
-                <input type="text" id="navn" name="fornavn" placeholder="Dit navn...">
-            </div>
-            <div class="col-12 kontaktform-overskrifter">
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email" placeholder="Din email...">
-            </div>
-            <div class="col-12 kontaktform-overskrifter">
-                <label for="emne">Emne</label>
-                <textarea id="emne" name="Emne" placeholder="Skriv noget..." style="height:300px"></textarea>
-            </div>
-            <div class="col-12 kontaktform-overskrifter">
-                <input style="text-transform: uppercase" type="submit" value="Send besked">
-            </div>
-        </div>
-    </form>
-</section>
+        </form>
+    </section>
+</main>
 
 <!-- Kontakt form slut -->
 
