--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             </div>
         </div>
     </nav>
-
-    <div class="hero-image">
+    <div class="hero-image" style="height: 60vh;">
         <div class="hero-text">
             <h1 style="font-size:50px">Chokolade til enhver smag</h1>
             <br>
