--- a/Produkt-Børnevenligt.html
+++ b/Produkt-Børnevenligt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Barnlige produkter</title>
+    <title>Børnevenlige produkter</title>
 
     <meta name="robots" content="All">
     <meta name="author" content="Udgiver">
