Fjernet / på undersider

--- a/Produkt-Børnevenligt.html
+++ b/Produkt-Børnevenligt.html
@@ -64,7 +64,7 @@
 
 <main>
     <div class="TekstForside px-lg-5">
-        <h1 class="Introtekst">PRODUKTER // DET BØRNEVENLIGE</h1>
+        <h1 class="Introtekst">PRODUKTER / DET BØRNEVENLIGE</h1>
         <p class="TekstForside-paragraph py-lg-3">Vores vilde og sjove chokolader til børn og barnlige sjæle, skaber
             glæde og grin uanset alder.
             Det er lavet med et kreativt sind, som alle bør opleve. </p>
