--- a/Produkt-Festlige.html
+++ b/Produkt-Festlige.html
@@ -63,7 +63,7 @@
 
 <main>
     <div class="TekstForside px-lg-5">
-        <h1 class="Introtekst">PRODUKTER // DET FESTLIGE</h1>
+        <h1 class="Introtekst">PRODUKTER / DET FESTLIGE</h1>
         <p class="TekstForside-paragraph py-lg-3">Chokolade til begivenheder er altid et hit.
             Få leveret det bedste stykke håndværk til dit kommende arrangement, som både du og dine gæster vil elske.
         </p>
