Ændret line-height på forsiden

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <main>
     <div class="TekstForside">
         <h1 class="Introtekst">Hvem er vi?</h1>
-        <p class="TekstForside-paragraph px-lg-5">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og
+        <p class="TekstForside-paragraph px-lg-5" style="line-height: 35px">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og
             tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det
             eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi
             fantastiske produkter til dig der har en større begivenhed i sigte. </p>
