--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
 <footer class="footer-distributed">
     <div class="footer-right">
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
     </div>
     <div class="footer-left">
         <p class="footer-links">
