--- a/Produkt-Eksklusive.html
+++ b/Produkt-Eksklusive.html
@@ -64,7 +64,7 @@
 <main>
     <div class="TekstForside px-lg-5">
         <h1 class="Introtekst">PRODUKTER / DET EKSKLUSIVE</h1>
-        <p class="TekstForside-paragraph py-lg-3">Vores eksklusive og fantastiske chokolader er til dig der ønsker den
+        <p class="TekstForside-paragraph py-lg-3" style="line-height: 35px">Vores eksklusive og fantastiske chokolader er til dig der ønsker den
             bedste smagsoplevelse.
             Chokoladerne er lavet på lækre kvalitetsprodukter.
             Herudover er de håndlavede, så både det indre og ydre spiller.
