Ændret billede på checkoutside

--- a/Checkout.html
+++ b/Checkout.html
@@ -104,7 +104,7 @@
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div>
-                                                        <img src="images/Chokolade-3styk.png"
+                                                        <img src="images/ChocoCloud.png"
                                                              class="img-fluid rounded-3"
                                                              alt="Shopping item" style="width: 65px;">
                                                     </div>
