--- a/Checkout.html
+++ b/Checkout.html
@@ -168,7 +168,7 @@
                                 </div>
 
                                 <button type="button" class="btn btn-block btn-lg bg-lyseBrun" style="font-weight: 600">
-                                    <div class="d-flex justify-content-end">
+                                    <div class="d-flex justify-content-center">
                                         <span style="font-size: 18px; text-transform: uppercase;">Fortsæt til betaling<i
                                                 class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                     </div>
