Rettet ikoner på alle undersider og slettet Om Os

--- a/Checkout.html
+++ b/Checkout.html
@@ -184,16 +184,15 @@
 
 <footer class="footer-distributed">
     <div class="footer-right">
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
     </div>
     <div class="footer-left">
         <p class="footer-links">
             <a class="link-1" href="#">HJEM</a>
-            <a href="#">SHOP</a>
             <a href="#">OM OS</a>
-            <a href="#">VÆRKSTED</a>
             <a href="#">KONTAKT</a>
+            <a href="Checkout.html">DIN KURV</a>
         </p>
         <p>CHOCOLATE CLUB &copy; 2022</p>
     </div>
