Font awesome ikon

--- a/kontaktform.html
+++ b/kontaktform.html
@@ -23,6 +23,10 @@
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Font Awesome ikoner -->
+    <script src="https://kit.fontawesome.com/b5fb28feeb.js" crossorigin="anonymous"></script>
+
 </head>
 
 
